Character-Sheet: Added class choice in create hero. Added template, designed view

--- a/OHET_Project/OHET_Project/Views/Home/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Home/Index.cshtml
@@ -2,30 +2,54 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+<!-- One -->
+<section id="one" class="wrapper style2">
+    <div class="inner">
+        <div class="grid-style">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sapien mauris, quis mollis nulla condimentum at. Donec ac libero non ligula interdum tincidunt. Proin id dui sed sapien dictum ullamcorper. Curabitur commodo risus eget nibh eleifend sodales. Integer semper semper fermentum. Nam sit amet metus malesuada, vestibulum magna interdum, faucibus felis. Integer imperdiet nulla ac est fringilla iaculis vel et erat. In hac habitasse platea dictumst. Mauris lacinia, dolor vitae rutrum lacinia, ipsum tellus tempor risus, non maximus mi leo sed risus.
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            Aliquam volutpat mollis neque sed mattis. Quisque lacinia commodo tortor, at tempor metus laoreet nec. Donec ut bibendum magna, in tincidunt tortor. Suspendisse porta libero sit amet leo mollis, id lobortis odio molestie. Suspendisse eu porttitor risus, eu elementum justo. Vivamus consectetur nunc ante, auctor sagittis eros consectetur porta. Proin rutrum porttitor felis et gravida. Donec quam dolor, maximus a metus vel, pharetra sodales lectus. Integer nec diam id tortor molestie fermentum eget ac leo. Nam dictum lacinia augue, eu rutrum orci porttitor a. Donec in tortor maximus, euismod lectus sed, ultrices orci.
+
+            Donec porttitor maximus porttitor. Phasellus vulputate a velit id dignissim. Praesent in erat vitae quam porttitor sodales. Proin elementum luctus nibh, id tincidunt risus hendrerit ac. Proin ac iaculis ante. Donec lacus sapien, eleifend quis lorem sed, tincidunt efficitur sapien. Mauris eu mauris volutpat, fringilla mauris vitae, malesuada eros. Integer vulputate iaculis suscipit. Suspendisse porttitor condimentum eleifend. Suspendisse fermentum risus mi, nec maximus elit porta eu. In id sodales quam, pulvinar porttitor enim.
+
+            Aliquam ullamcorper purus nec orci ultrices, vitae dictum neque consequat. Vestibulum eget lorem leo. Phasellus sit amet arcu vel ipsum imperdiet viverra. Morbi vehicula feugiat pretium. In hac habitasse platea dictumst. Suspendisse rhoncus nisl metus. Morbi iaculis leo id nisl facilisis, eget euismod augue pharetra. Nulla non urna eget urna ornare ullamcorper. Nulla a venenatis est, quis tincidunt erat. Praesent consectetur elit nec mauris aliquet efficitur.
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+</section>
+
+<!-- Two -->
+<section id="two" class="wrapper style3">
+    <div class="inner">
+        <header class="align-center">
+            <p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
+            <h2>Morbi maximus justo</h2>
+        </header>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</section>
+
+<!-- Three -->
+<section id="three" class="wrapper style2">
+    <div class="inner">
+        <header class="align-center">
+            <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
+            <h2>Morbi maximus justo</h2>
+        </header>
+        <div class="gallery">
+            <div>
+                <div class="image fit">
+                    <a href="#"><img src="~/Images/image01.jpg" alt="s.obrazek" height="739" width="528" /></a>
+                </div>
+            </div>
+            <div>
+                <div class="image fit">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sapien mauris, quis mollis nulla condimentum at. Donec ac libero non ligula interdum tincidunt. Proin id dui sed sapien dictum ullamcorper. Curabitur commodo risus eget nibh eleifend sodales. Integer semper semper fermentum. Nam sit amet metus malesuada, vestibulum magna interdum, faucibus felis. Integer imperdiet nulla ac est fringilla iaculis vel et erat. In hac habitasse platea dictumst. Mauris lacinia, dolor vitae rutrum lacinia, ipsum tellus tempor risus, non maximus mi leo sed risus.
+
+                    Aliquam volutpat mollis neque sed mattis. Quisque lacinia commodo tortor, at tempor metus laoreet nec. Donec ut bibendum magna, in tincidunt tortor. Suspendisse porta libero sit amet leo mollis, id lobortis odio molestie. Suspendisse eu porttitor risus, eu elementum justo. Vivamus consectetur nunc ante, auctor sagittis eros consectetur porta. Proin rutrum porttitor felis et gravida. Donec quam dolor, maximus a metus vel, pharetra sodales lectus. Integer nec diam id tortor molestie fermentum eget ac leo. Nam dictum lacinia augue, eu rutrum orci porttitor a. Donec in tortor maximus, euismod lectus sed, ultrices orci.
+
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ornare sapien mauris, quis mollis nulla condimentum at. Donec ac libero non ligula interdum tincidunt. Proin id dui sed sapien dictum ullamcorper. Curabitur commodo risus eget nibh eleifend sodales. Integer semper semper fermentum. Nam sit amet metus malesuada, vestibulum magna interdum, faucibus felis. Integer imperdiet nulla ac est fringilla iaculis vel et erat. In hac habitasse platea dictumst. Mauris lacinia, dolor vitae rutrum lacinia, ipsum tellus tempor risus, non maximus mi leo sed risus.
+
+                    Aliquam volutpat mollis neque sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </div>
+            </div>
+        </div>
+</section>
