--- a/OHET_Project/OHET_Project/Views/Heroes/_createClassChoice.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/_createClassChoice.cshtml
@@ -1,7 +1,31 @@
 ﻿@model IEnumerable<OHET_Project.Models.models.Class>
 
-@foreach (var item in Model)
-{
-    <h4>@Html.DisplayFor(modelItem => item.name)</h4>
-    <p>@Html.DisplayFor(modelItem => item.description)</p>
-}
+<section id="one" class="wrapper style2">
+    <div class="inner">
+        <div class="grid-style">
+            @foreach (var item in Model)
+            {
+                <div>
+                    <div class="box">
+                        <div class="image fit">
+                            <img src="images/pic02.jpg" alt="" />
+                        </div>
+                        <div class="content">
+                            <header class="align-center">
+                                <p>maecenas sapien feugiat ex purus</p>
+                                <h2>@Html.DisplayFor(modelItem => item.name)</h2>
+                            </header>
+                            <p>@Html.DisplayFor(modelItem => item.description)</p>
+                            <footer class="align-center">
+                                <a href="@Url.Action("_createClassChoiceResult", "Heroes", new { classID = item.IDClass })" class="button alt">Wybierz</a>
+                            </footer>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</section>
+
+
+
