--- a/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
+++ b/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 -->
 <html>
 <head>
-    <title>Hallowed Tower</title>
+    <title>OHET Legacy</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="~/Content/HieloTemplate/main.css" />
