Character-Sheet: Added saving data to db methods in controller.
TODO fix problems and create rest of inserting methods

--- a/OHET_Project/OHET_Project/Views/Heroes/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Create.cshtml
@@ -27,6 +27,15 @@
             }
         </div>
     }
+    <!-- KONCEPT -->
+    @if (ViewBag.classID != null && ViewBag.heroName != null && ViewBag.conceptDescription == null)
+    {
+        <div class="inner">
+            @{
+                Html.RenderAction("_createPersonalData", "Heroes", new { classID = ViewBag.classID });
+            }
+        </div>
+    }
 </section>
 
 
