--- a/OHET_Project/OHET_Project/Views/Heroes/_createPersonalData.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/_createPersonalData.cshtml
@@ -4,7 +4,7 @@
 @using (Html.BeginForm("_createPersonalDataResult", "Heroes", new { classID = ViewBag.classID }))
 {
     <div class="6u 12u$(xsmall)">
-        <input type="text" name="heroNAme" id="heroName" value="" placeholder="Name" />
+        <input type="text" name="heroName" id="heroName" value="" placeholder="Name" />
     </div>
     <br />
     <div class="12u$">
