Character-Sheet: Fixed small problems with redirection to actions

--- a/OHET_Project/OHET_Project/Views/Heroes/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Create.cshtml
@@ -19,22 +19,31 @@
         Html.RenderAction("_createClassChoice", "Heroes");
     }
     <!-- IMIĘ I OPIS -->
-    @if (ViewBag.classID != null && ViewBag.heroName == null)
+    @if (ViewBag.classID != null)
     {
-        <div class="inner">
-            @{
-                Html.RenderAction("_createPersonalData", "Heroes", new { classID = ViewBag.classID });
-            }
-        </div>
+        if (ViewBag.heroName == null)
+        {
+            <div class="inner">
+                @{
+                    Html.RenderAction("_createPersonalData", "Heroes", new { classID = ViewBag.classID });
+                }
+            </div>
+        }
     }
     <!-- KONCEPT -->
-    @if (ViewBag.classID != null && ViewBag.heroName != null && ViewBag.conceptDescription == null)
+    @if (ViewBag.classID != null)
     {
-        <div class="inner">
-            @{
-                Html.RenderAction("_createPersonalData", "Heroes", new { classID = ViewBag.classID });
+        if (ViewBag.heroName != null)
+        {
+            if (ViewBag.conceptDescription == null)
+            {
+                <div class="inner">
+                    @{
+                        Html.RenderAction("_createConceptData", "Heroes", new { classID = ViewBag.classID, heroName = ViewBag.heroName });
+                    }
+                </div>
             }
-        </div>
+        }
     }
 </section>
 
