--- a/OHET_Project/OHET_Project/Views/Heroes/_createConceptData.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/_createConceptData.cshtml
@@ -1,14 +1,14 @@
 ﻿@model OHET_Project.Models.models.Concept
 
-@using (Html.BeginForm("_createPersonalDataResult", "Heroes", new { classID = ViewBag.classID, heroName = ViewBag.conceptDescription }))
+@using (Html.BeginForm("_createConceptDataResult", "Heroes", new { classID = ViewBag.classID, heroName = ViewBag.conceptDescription }))
 {
     <div class="12u$">
-        <textarea type="text" name="conceptName" id="conceptName" value="" placeholder="Koncepcja Twego bohatera" rows="2"></textarea>
+        <textarea type="text" name="conceptDescription" id="conceptDescription" value="" placeholder="Koncepcja Twego bohatera" rows="2"></textarea>
     </div>
 
     <br />
 
     <footer class="align-center">
-        <button type="submit" class="button alt">Dalej!</button>
+        <button type="submit" class="button alt">Zakończ!</button>
     </footer>
 }
