Template: Small changes in footer

--- a/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
+++ b/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
@@ -76,9 +76,8 @@
     <!-- Footer -->
     <footer id="footer">
         <div class="copyright">
-            All Content is &copy;Copyright of Marcin Krupa aka Ririsu <br>
-            Pokémon And All Respective Names are Trademark & &copy; of Nintendo 1996-2017 <br>
-            Layout Created by Helio edited by Ririsu
+            All Content is &copy;Copyright of Marcin Krupa &Aacute; Imran Muhammad <br>
+            Trademark & &copy; of Outstanding Heroes and Extraordinary Threads 2017-2018 by kuglarz
         </div>
     </footer>
 
