Added OHET image.

--- a/OHET_Project/OHET_Project/Views/Home/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
         <div class="gallery">
             <div>
                 <div class="image fit">
-                    <a href="#"><img src="~/Images/image01.jpg" alt="s.obrazek" height="739" width="528" /></a>
+                    <a href="#"><img src="~/Images/OHET.png" alt="s.obrazek" height="739" width="528" /></a>
                 </div>
             </div>
             <div>
