Changed background images.

--- a/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
+++ b/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
     <!-- Banner -->
     <section class="banner full">
         <article>
-            <img src="~/Images/slide01.jpg" alt="" />
+            <img src="~/Images/cover.png" alt="" />
             <div class="inner">
                 <header>
                     <p>Your Destiny</p>
@@ -46,7 +46,7 @@
             </div>
         </article>
         <article>
-            <img src="~/Images/slide02.jpg" alt="" />
+            <img src="~/Images/cover.png" alt="" />
             <div class="inner">
                 <header>
                     <p>Lorem ipsum dolor sit amet nullam feugiat</p>
@@ -55,7 +55,7 @@
             </div>
         </article>
         <article>
-            <img src="~/Images/slide03.png" alt="" />
+            <img src="~/Images/cover.png" alt="" />
             <div class="inner">
                 <header>
                     <p>Adipiscing lorem ipsum feugiat sed phasellus consequat</p>
@@ -64,7 +64,7 @@
             </div>
         </article>
         <article>
-            <img src="~/Images/slide05.jpg" alt="" />
+            <img src="~/Images/cover.png" alt="" />
             <div class="inner">
                 <header>
                     <p>Ipsum dolor sed magna veroeros lorem ipsum</p>
