--- a/OHET_Project/OHET_Project/Content/HieloTemplate/main.css
+++ b/OHET_Project/OHET_Project/Content/HieloTemplate/main.css
@@ -3080,7 +3080,7 @@ table {
     .wrapper.style3 {
         background-color: #990000;
         color: #bfbfbf;
-        background-image: url(../../images/pic03.jpg);
+        background-image: url(../../images/cover.png);
         background-size: cover;
         background-attachment: fixed;
         background-position: center;
