Removed Item views + created new css for tables.

--- a/OHET_Project/OHET_Project/Views/Spells/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Spells/Index.cshtml
@@ -4,6 +4,8 @@
     ViewBag.Title = "Index";
 }
 
+<link href="~/Content/table.css" rel="stylesheet" type="text/css" />
+
 <h2>Index</h2>
 
 <p>
@@ -55,3 +57,12 @@
 }
 
 </table>
+
+@*
+@Styles_()
+
+@helper Styles_()
+{
+    <link href="@Url.Content("~/Content/table.css")" rel="stylesheet" type="text/css" />
+}
+*@
