--- a/OHET_Project/OHET_Project/Views/Spells/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Spells/Index.cshtml
@@ -6,58 +6,53 @@
 
 <link href="~/Content/table.css" rel="stylesheet" type="text/css" />
 
-<h2>Index</h2>
+<h2>Spells</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Class.name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Content.ApplicationUserId)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.description)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.conceptLvl)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Class.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Content.ApplicationUserId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.description)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.conceptLvl)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDSpell }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDSpell }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDSpell })
-        </td>
-    </tr>
+@foreach (var i in Model.Select(c => c.Class.IDClass).Distinct().ToArray()) {
+    <h2>@Html.DisplayName(Model.Where(a => a.Class.IDClass == i).Select(aa => aa.Class.name).FirstOrDefault())</h2>
+    <table class="table">
+        @*
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.conceptLvl)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.description)
+            </th>
+            <th></th>
+        </tr>
+        *@
+    @foreach (var item in Model) {
+        if (item.IDClass == i)
+        {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.conceptLvl)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.description)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.IDSpell }) |
+                @Html.ActionLink("Details", "Details", new { id = item.IDSpell }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.IDSpell })
+            </td>
+        </tr>
+        }
+    }
+    
+    </table>
 }
-
-</table>
-
 @*
 @Styles_()
 
