--- a/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Index.cshtml
@@ -10,10 +10,8 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
+    @*
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Content.ApplicationUserId)
-        </th>
         <th>
             @Html.DisplayNameFor(model => model.name)
         </th>
@@ -22,24 +20,37 @@
         </th>
         <th></th>
     </tr>
-
+    *@
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Content.ApplicationUserId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.description)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDClass }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDClass }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDClass })
-        </td>
-    </tr>
+    if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.ApplicationUserId == "")
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.name)
+            </td>
+            @if (@item.description.Substring(0, @item.description.IndexOf('.')) == @item.description.Substring(0, @item.description.Length - 1))
+            {
+                <td>
+                    @item.description.Substring(0, @item.description.IndexOf('.') + 1)
+                </td>
+            }
+            else
+            {
+                <td>
+                    @item.description.Substring(0, @item.description.IndexOf('.') + 1) @Html.ActionLink("...", "Details", new { id = item.IDClass })
+                </td>
+            }
+            <td>
+                @Html.ActionLink("Details", "Details", new { id = item.IDClass })
+            </td>
+            @if (!User.Identity.Name.IsEmpty())
+            {
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.IDClass }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.IDClass })
+                </td>
+            }
+        </tr>
+    }
 }
-
 </table>
