--- a/OHET_Project/OHET_Project/Views/Monsters/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Monsters/Index.cshtml
@@ -10,9 +10,10 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
+    @*
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Content.ApplicationUserId)
+            @Html.DisplayNameFor(model => model.conceptLvl)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.name)
@@ -20,32 +21,43 @@
         <th>
             @Html.DisplayNameFor(model => model.description)
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.conceptLvl)
-        </th>
         <th></th>
     </tr>
-
+    *@
 @foreach (var item in Model) {
+    if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.ApplicationUserId == "")
+    {
     <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Content.ApplicationUserId)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.description)
-        </td>
         <td>
             @Html.DisplayFor(modelItem => item.conceptLvl)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDMonster }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDMonster }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDMonster })
+            @Html.DisplayFor(modelItem => item.name)
         </td>
+        @if (@item.description.Substring(0, @item.description.IndexOf('.')) == @item.description.Substring(0, @item.description.Length - 1))
+        {
+            <td>
+                @item.description.Substring(0, @item.description.IndexOf('.') + 1)
+            </td>
+        }
+        else
+        {
+            <td>
+                @item.description.Substring(0, @item.description.IndexOf('.') + 1) @Html.ActionLink("...", "Details", new { id = item.IDMonster })
+            </td>
+        }
+        <td>
+            @Html.ActionLink("Details", "Details", new { id = item.IDMonster })
+        </td>
+        @if (!User.Identity.Name.IsEmpty())
+        {
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.IDMonster }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.IDMonster })
+            </td>
+        }
     </tr>
+    }
 }
 
 </table>
