Character-Sheet-Fix: Fixed character sheet creation.
Deleted Concept's ow partial view & controller's
Moved concept fields etc to personal data partial & controller's method
Added new attribute partrial and controller's method
Added new counting words in string alghoritm

--- a/OHET_Project/OHET_Project/Views/Heroes/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Create.cshtml
@@ -18,7 +18,7 @@
         <!-- BODY -->
         Html.RenderAction("_createClassChoice", "Heroes");
     }
-    <!-- IMIĘ I OPIS -->
+    <!-- IMIĘ, KONCEPCJA I OPIS  -->
     @if (ViewBag.classID != null)
     {
         if (ViewBag.heroName == null)
@@ -38,7 +38,7 @@
             </div>
         }
     }
-    <!-- KONCEPT -->
+    <!-- ATRYBUTY -->
     @if (ViewBag.classID != null)
     {
         if (ViewBag.heroName != null)
@@ -49,13 +49,13 @@
                 <div class="inner">
                     <header class="align-center">
                         <p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-                        <h2>Krok Trzeci - Określ swą koncepcję</h2>
+                        <h2>Krok Trzeci - Statystyki Twojego Bohatera</h2>
                     </header>
                 </div>
                 <!-- BODY -->
                 <div class="inner">
                     @{
-                        Html.RenderAction("_createConceptData", "Heroes", new { classID = ViewBag.classID, heroName = ViewBag.heroName });
+                        Html.RenderAction("_createAttributesData", "Heroes", new { classID = ViewBag.classID, heroName = ViewBag.heroName, description = ViewBag.description });
                     }
                 </div>
             }
