--- a/OHET_Project/OHET_Project/Views/Heroes/_createPersonalData.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/_createPersonalData.cshtml
@@ -7,6 +7,10 @@
         <input type="text" name="heroName" id="heroName" value="" placeholder="Name" />
     </div>
     <br />
+    <div class="6u 12u$(xsmall)">
+        <input type="text" name="description" id="description", value="" placeholder="Description" />
+    </div>
+    <br />
     <div class="12u$">
         <textarea placeholder="Opowiedz nam swoją historię" rows="12"></textarea>
     </div>
