--- a/OHET_Project/OHET_Project/Views/Monsters/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Monsters/Index.cshtml
@@ -25,7 +25,7 @@
     </tr>
     *@
 @foreach (var item in Model) {
-    if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.ApplicationUserId == "")
+    if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.isOfficial == true)
     {
     <tr>
         <td>
