--- a/OHET_Project/OHET_Project/Views/Spells/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Spells/Index.cshtml
@@ -32,7 +32,7 @@
     @foreach (var item in Model) {
         if (item.IDClass == i)
         {
-            if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.ApplicationUserId == "")
+            if (@item.Content.ApplicationUserId == ViewBag.userId || @item.Content.isOfficial == true)
             {
             <tr>
                 <td>
