--- a/OHET_Project/OHET_Project/Views/Posts/Create.cshtml
+++ b/OHET_Project/OHET_Project/Views/Posts/Create.cshtml
@@ -30,7 +30,7 @@
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        @*
         <div class="form-group">
             @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -44,6 +44,13 @@
             <div class="col-md-10">
                 @Html.DropDownList("ApplicationUserId", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ApplicationUserId, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        *@
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="button" value="" class="btn btn-default" />
             </div>
         </div>
 
