--- a/OHET_Project/OHET_Project/Views/Posts/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Posts/Index.cshtml
@@ -12,16 +12,19 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.ApplicationUser.Email)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Description)
+            @Html.DisplayNameFor(model => model.ApplicationUser.Email)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Date)
+        </th>
+        <th>
+            Comments
+        </th>
+        <th>
+            Read time
         </th>
         <th></th>
     </tr>
@@ -29,21 +32,32 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.ApplicationUser.Email)
-        </td>
-        <td>
             @Html.DisplayFor(modelItem => item.Title)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Description)
+            @Html.DisplayFor(modelItem => item.ApplicationUser.Email)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Date)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.IDPost }) |
-            @Html.ActionLink("Details", "Details", new { id=item.IDPost }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.IDPost })
+            @item.comments.Count
+        </td>
+        <td>
+            @{ 
+                int t = @item.Description.Split(' ').Count() / 200;
+            }
+            @t min
+        </td>
+        @if (@item.ApplicationUserId == ViewBag.userId)
+        {
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.IDPost }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.IDPost })
+            </td>
+        }
+        <td>
+            @Html.ActionLink("Details", "Details", new { id=item.IDPost })
         </td>
     </tr>
 }
