--- a/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
+++ b/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     <nav id="menu">
         @Html.Partial("_LoginPartial")
         <ul class="links">
+            <li>@Html.ActionLink("Admin Panel", "Index", "ApplicationUsers", new { area = "" }, new { @class = "navbar-brand" })</li>
             <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })</li>
             <li>@Html.ActionLink("My characters", "Index", "Heroes", new { area = "" }, new { @class = "navbar-brand" })</li>
             <li>@Html.ActionLink("Create Character", "Create", "Heroes", new { area = "" }, new { @class = "navbar-brand" })</li>
